fix: make scrolling vertical on small screens

--- a/public/styles.css
+++ b/public/styles.css
@@ -264,6 +264,7 @@ blockquote {
   width: 100%; max-height: 20%;
   display: flex; gap: 32px;
   overflow-x: auto;
+  overflow-y: hidden;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   scrollbar-width: none;
@@ -275,6 +276,22 @@ blockquote {
   border: 1px dotted var(--foreground);
   border-radius: 8px;
   scroll-snap-align: center;
+}
+
+@media only screen and (max-width: 640px) {
+  .timeline {
+    flex-direction: column;
+    gap: 4px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
+    text-align: start;
+  }
+
+  .slide {
+    width: auto; height: auto;
+    scroll-snap-align: start;
+  }
 }
 
 a {
